re PR c++/38698 (ICE initializing union with initializer list)

PR c++/38698
        * typeck2.c (process_init_constructor_union): Handle excess
        initializers.
        (process_init_constructor_record): Likewise.

        PR c++/38684
        * typeck2.c (digest_init_r): Don't use process_init_constructor
        for non-aggregate classes.

From-SVN: r143024