gcc/testsuite/g++.dg/cpp0x/initlist11.C
@@ -1,0 +1,17 @@
+// PR c++/38684
+
+#include <initializer_list>
+
+struct Y {};
+
+struct X : Y { 
+  X(std::initializer_list<int>) {}
+}; 
+
+struct A { 
+  X v;
+};
+
+int main() {
+  A a{ {1,2,3} };
+}
