gcc/testsuite/g++.dg/cpp0x/initlist12.C
@@ -1,0 +1,15 @@
+// PR c++/38698
+
+struct A
+{
+  int i;
+};
+
+A a({1,2});
+
+union U
+{
+  int i,j;
+};
+
+U u({1,2});
